MES-6991 fix bold test causing buttons to wrap on TR (#1983)
* fix bold test causing buttons to wrap on TR

* bump app version

--- a/src/pages/test-report/components/controlled-stop/controlled-stop.scss
+++ b/src/pages/test-report/components/controlled-stop/controlled-stop.scss
@@ -30,7 +30,7 @@ controlled-stop {
       padding-right: 5px;
 
       driving-faults-badge {
-        width: 30px;
+        width: 27px;
       }
 
       .fault-wrapper {
